# mcp-presentation

./: .gitignore  README.md  main.py  pyproject.toml
basic/: 00_llm_call.ipynb  01_tokens.ipynb  05_agents_sdk.ipynb  api_key.py  mermaid.py  part_00_llm_call.ipynb  part_01_tokens.ipynb  part_02_llm_reply.ipynb  part_03_structured_output.ipynb  part_04_function_calling.ipynb  part_05_agents_sdk.ipynb  utils.py
basic/part_06_universal_function_call/: 06_universal_function_call.ipynb  tools_server.py  tools_server_client.py  tools_server_client_improved.py  tools_server_improved.py
basic/part_07_mcp_intro/: 07_mcp_intro.ipynb  simple_server.py
basic/part_08_mcp_prompts/: 08_mcp_prompts.ipynb  server_with_prompts.py
basic/part_09_roots/: part_09_roots.ipynb
basic/part_10_resources/: part_10_resources.ipynb  server_with_resources.py
basic/part_11_sampling/: part_11_sampling.ipynb  server_with_sampling.py
basic/part_12_elicitation/: part_12_elicitation.ipynb  server_with_elicitation.py
basic/part_14_http/: part_14_http.md  run.sh
basic/part_15_good_practices/: part_15_good_practices.md
