[project]
name = "mcp-presentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.1",
    "openai>=1.107.2",
    "gradio>=5.45.0",
    "langchain>=0.3.27",
    "huggingface-hub>=0.34.4",
    "transformers>=4.56.1",
    "ipywidgets>=8.1.7",
    "tiktoken>=0.11.0",
    "rich>=14.1.0",
    "openai-agents>=0.3.0",
    "mcp[cli]>=1.14.0",
    "httpx>=0.28.1",
    "fastmcp>=2.12.4",
]
